--- a/client/prof-edit.html
+++ b/client/prof-edit.html
@@ -35,39 +35,30 @@
         <!-- html 코드는 id가 app인 태그 안에서 작업 -->
         <table>
             <tr>
-                <th>사번</th>
+                <th>교수번호</th>
                 <td>
-                    <span v-if="empNo == ''">
-                        <input type="text" v-model="info.empNo">
-                        <button class="check-btn">중복체크</button>
-                    </span>
-                    <span v-else>
-                        <input type="text" v-model="info.empNo" disabled>
-                    </span>
+                    <input type="text" v-model="info.profNo" disabled>
                 </td>
             </tr>
             <tr>
                 <th>이름</th>
-                <td><input type="text" v-model="info.eName"></td>
+                <td><input type="text" v-model="info.name"></td>
             </tr>
             <tr>
-                <th>직책</th>
-                <td><input type="text" v-model="info.job"></td>
+                <th>아이디</th>
+                <td><input type="text" v-model="info.id"></td>
             </tr>
             <tr>
-                <th>부서</th>
-                <td>
-                    <label><input type="radio" value="10" v-model="info.selectDept">ACCOUNTING</label>
-                    <label><input type="radio" value="20" v-model="info.selectDept">RESEARCH</label>
-                    <br>
-                    <label><input type="radio" value="30" v-model="info.selectDept">SALES</label>
-                    <label><input type="radio" value="40" v-model="info.selectDept">OPERATIONS</label>
-                </td>
+                <th>직급</th>
+                <td><input type="text" v-model="info.position"></td>
+            </tr>
+            <tr>
+                <th>급여</th>
+                <td><input type="text" v-model="info.pay"></td>
             </tr>
         </table>
         <div>
-            <button v-if="empNo == ''" @click="fnAdd">추가</button>
-            <button v-else @click="fnEdit">수정</button>
+            <button @click="fnEdit">수정</button>
         </div>
     </div>
 </body>
@@ -79,38 +70,20 @@
             return {
                 // 변수 - (key : value)
                 info : {
-                    selectDept : "10"
+                   
                 },
-                empNo : ""
+                profNo : ""
             };
         },
         methods: {
             // 함수(메소드) - (key : function())
-            fnAdd : function () {
-                let self = this;
-                if(self.info.empNo.length != 4){
-                    alert("사번은 4글자 입니다.");
-                    return;
-                }
-                console.log(self.info);
-                $.ajax({
-                    url: "http://localhost:3009/emp/insert",
-                    dataType: "json",
-                    type: "GET",
-                    data: self.info,
-                    success: function (data) {
-                        alert("추가되었습니다!");
-                        location.href="emp-list.html";
-                    }
-                });
-            },
             fnInfo : function () {
                 let self = this;
                 $.ajax({
-                    url: "http://localhost:3009/emp/info",
+                    url: "http://localhost:3009/prof/info",
                     dataType: "json",
                     type: "GET",
-                    data: {empNo : self.empNo},
+                    data: {profNo : self.profNo},
                     success: function (data) {
                         console.log(data);
                         self.info = data.info;
@@ -119,21 +92,15 @@
             },
             fnEdit : function(){
                 let self = this;
-                // let param = {
-                //     empNo : self.info.empNo,
-                //     eName : self.info.eName,
-                //     job : self.info.job,
-                //     selectDept : self.info.selectDept
-                // };
                 let param = self.info;
                 $.ajax({
-                    url: "http://localhost:3009/emp/update",
+                    url: "http://localhost:3009/prof/update",
                     dataType: "json",
                     type: "GET",
                     data: param,
                     success: function (data) {
                         alert("수정되었습니다!");
-                        location.href="emp-list.html";
+                        location.href="prof-list.html";
                     }
                 });
             }
@@ -142,9 +109,9 @@
             // 처음 시작할 때 실행되는 부분
             let self = this;
             const queryParams = new URLSearchParams(window.location.search);
-            self.empNo = queryParams.get('empNo') || ''; 
+            self.profNo = queryParams.get('profNo') || ''; 
 
-            if(self.empNo != ""){
+            if(self.profNo != ""){
                 self.fnInfo();
             }
         }
