--- a/client/emp-list.html
+++ b/client/emp-list.html
@@ -44,6 +44,7 @@
         </div>
         <table>
             <tr>
+                <th>선택</th>
                 <th>사번</th>
                 <th>이름</th>
                 <th>직책</th>
@@ -53,6 +54,7 @@
                 <th>삭제</th>
             </tr>
             <tr v-for="item in list">
+                <td><input type="checkbox" :value="item.EMPNO" v-model="selectItems"></td>
                 <td>{{item.EMPNO}}</td>
                 <td>
                     <a href="javascript:;" @click="fnView(item.EMPNO)">{{item.ENAME}}</a>
@@ -64,7 +66,10 @@
                 <td><button @click="fnRemove(item.EMPNO)">삭제</button></td>
             </tr>
         </table>
-        <a href="emp-edit.html"><button>추가</button></a>
+        <div>
+            <a href="emp-edit.html"><button>추가</button></a>
+            <button @click="fnRemoveAll">선택삭제</button>
+        </div>
     </div>
 </body>
 </html>
@@ -75,7 +80,8 @@
             return {
                 // 변수 - (key : value)
                 list : [],
-                deptNo : ""
+                deptNo : "",
+                selectItems : [] 
             };
         },
         methods: {
@@ -117,6 +123,26 @@
             },
             fnView : function(empNo){
                 window.open(`emp-view.html?empNo=${empNo}`, "view", "width=500, height=500");
+            },
+            fnRemoveAll : function(){
+                let self = this;
+                if(!confirm("정말 삭제??")){
+                    return;
+                }
+                $.ajax({
+                    url: "http://localhost:3009/emp/deleteAll",
+                    dataType: "json",
+                    type: "GET",
+                    data: {removeList : self.selectItems},
+                    traditional : true,
+                    success: function(data) {
+                        if(data.result == "success"){
+                            alert("삭제되었습니다!");
+                            self.fnEmpList();
+                        }
+                        
+                    }
+                });
             }
         }, // methods
         mounted() {
